--- a/src/app/component/game/game.component.html
+++ b/src/app/component/game/game.component.html
@@ -1,19 +1,20 @@
-<p>
-  game works!
-</p>
+<div class="table">
+  <div class="control">
+    <div *ngIf="!showResult">
+      <div class="deck" (click)="hitMe()">Hit Me!</div>
+      <div class="stop" (click)="stop()">Stop</div>
+    </div>
 
-<h1>Bank</h1>
-<app-hand [hand]="bank"></app-hand>
-<h1>Player</h1>
-<app-hand [hand]="player"></app-hand>
-
-<div *ngIf="showResult">
-  <p>{{ gameResult }}</p>
-
-  <button (click)="restart()">Restart</button>
-</div>
-
-<div *ngIf="!showResult">
-  <button (click)="hitMe()">Hit me!</button>
-  <button (click)="stop()">Stop</button>
+    <div *ngIf="showResult" class="result">
+      <h3>Result:</h3>
+      <p>{{ gameResult }}</p>
+      <div class="restart stop" (click)="restart()">Restart</div>
+    </div>
+  </div>
+  <div class="bank-hand">
+    <app-hand [hand]="bank"></app-hand>
+  </div>
+  <div class="player-hand">
+    <app-hand [hand]="player"></app-hand>
+  </div>
 </div>
