Cleaning the code up some, killed a bug, ready for showtime!

--- a/src/app/component/hand/hand.component.scss
+++ b/src/app/component/hand/hand.component.scss
@@ -26,6 +26,7 @@ ul {
     margin: 10px;
     border: 1px solid #333;
     border-radius: 5px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, .33);
     height: 160px;
     width: 120px;
     background-color: #efefef;
