--- a/src/app/component/game/game.component.scss
+++ b/src/app/component/game/game.component.scss
@@ -31,6 +31,7 @@
   line-height: 150px;
   font-weight: 600;
   border: 1px solid #000;
+  border-radius: 3px;
   box-shadow: 5px 5px 1px rgba(0, 0, 0, .33);
   cursor: pointer;
 }
@@ -61,5 +62,5 @@
   position: absolute;
   bottom: 40px;
   left: 0px;
-  width: 600px;
+  width: 800px;
 }
