Had to do a double box-shadow, just because I can

--- a/src/app/component/game/game.component.scss
+++ b/src/app/component/game/game.component.scss
@@ -6,7 +6,7 @@
   background-color: #292;
   border: 20px solid #922;
   padding: 10px;
-  box-shadow: 15px 15px 1px rgba(0, 0, 0, .33);
+  box-shadow: 15px 15px 1px rgba(0, 0, 0, .33), 1px 1px 5px rgba(0, 0, 0, .33)inset;
 }
 
 .control {
